<resources>
    <string name="app_name">ScoreTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    #Menu Items
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    #Other Strings
    <string name="playerName">%s\n%s</string>
    <string name="score">Score</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="name1">Name 1</string>
    <string name="name2">Name 2</string>
    <string name="EnterPlayerOne">Player/Team One Name</string>
    <string name="EnterPlayerTwo">Player/Team Two Name</string>
    <string name="enter">Save</string>
    <string name = "maxScore">Game Point At %s</string>
    <string name="entermax">Game Point Score</string>
    <string name="maxScoreHint">Game Point </string>
    <string name="creator_info">Made By Yash Upadhyay</string>
    <string name= "version">Version 1.0</string>
    <string name="git_link"><a href="https://github.com/yazh1202/ScoreTracker">Github</a></string>
    <string name="channel_name">mainchannel</string>
    <string name="channel_description">Channel to send simple notification</string>
    <string name="score_to_win">Score to Win</string>
    <string name="name">Name</string>
</resources>